--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /dataSources.local.xml
 
 bnn/src/training/*-pynq/
+bnn/src/training/Pytorch/results/*
+bnn/src/training/Pytorch/data/*
+bnn/src/training/Pytorch/__pycache__/*
